<resources>
    <string name="app_name">Create</string>
    <string name="search_title">Search</string>
    <string name="home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="setting">Settings</string>
    <string name="market">Find What To Eat!</string>
    <string name="magazines">Top Magazines</string>
    <string name="courses">Become a Cooking Master!</string>
    <string name="pay_his">Payment History</string>
    <string name="logout">Log Out</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="delete">DELETE</string>
    <string name="buy">Buy!</string>
    <string name="recipes">Recipes</string>
    <string name="AddIngredient">Add Ingredient</string>
    <string name="age">AGE</string>
    <string name="weight">WEIGHT</string>
    <string name="gender">GENDER</string>
    <string name="scanner">Barcode Scanner</string>
    <string name="cancelScanning">Return</string>
</resources>
