<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/my_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:theme="@style/Toolbar.MyStyle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="60dp"
                        android:gravity="center"
                        android:text="@string/market"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </android.support.v7.widget.Toolbar>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:layout_marginTop="10dp"
                    android:text="@string/magazines"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:src="@drawable/magazines"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/courses"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:src="@drawable/course"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>